<resources>
    <string name="app_name">aula05</string>

    <string name="asta">I will climb to the top because our dreams are made on top of what we achieve. - Asta</string>
    <string name="itachi1">If everyone knew the weight of your words they would give more value to silence. - Itachi </string>
    <string name="itachi2">The fear of taking chances is what keeps you from evolving. - Itachi </string>
    <string name="pain"> Until you know someone's pain, you won't know who they are. Even if you know it, you will not be able to understand. - Pain </string>
    <string name="zenitsu"> If you're only good at one thing, become a master of it. - Zenitsu Agatsuma </string>
</resources>